# Zero-to-Production

./: Cargo.toml  README.md  configuration.yaml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
